--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 
 <body>
     <div id="for--desktop">
+        <div class="cursor small"></div>
         <div class="for--desktop__main">
 
             <div class="menu-wrapper">
@@ -91,19 +92,24 @@
                             <br>
                             <br>
 
-                            Fredo enjoys vinyl feel and discovering music. He creates mixes under the pseudonym <a
+                            He creates mixes under the pseudonym <a
                                 class="link" href="https://www.mixcloud.com/fr_radio/"
                                 target="_blank"><em>fredonaut</em></a> -
 
                             <br>
                             <br>
 
-                            <iframe width="100%" height="60"
-                                src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fwarning-from-space-%E5%AE%87%E5%AE%99%E4%BA%BA%E6%9D%B1%E4%BA%AC%E3%81%AB%E7%8F%BE%E3%82%8F%E3%82%8B%2F"
+                            <iframe width="100%" height="120"
+                                src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Ffr_radio%2Fwarning-from-space-%E5%AE%87%E5%AE%99%E4%BA%BA%E6%9D%B1%E4%BA%AC%E3%81%AB%E7%8F%BE%E3%82%8F%E3%82%8B%2F"
                                 frameborder="0"></iframe>
-                            <iframe width="100%" height="60"
-                                src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fcat-women-of-the-moon%2F"
+                                <iframe width="100%" height="120" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Ffr_radio%2Fcat-women-of-the-moon%2F" frameborder="0" ></iframe>
+                            <iframe width="100%" height="120"
+                                src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Ffr_radio%2Finvasion-of-the-neptune-men-%E5%AE%87%E5%AE%99%E5%BF%AB%E9%80%9F%E8%88%B9%2F"
                                 frameborder="0"></iframe>
+                            <iframe width="100%" height="120"
+                                src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Ffr_radio%2Fsanto-el-enmascarado-de-plata-vs-la-invasi%C3%B3n-de-los-marcianos%2F"
+                                frameborder="0"></iframe>
+                                <iframe width="100%" height="120" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Ffr_radio%2Fbarbarella%2F" frameborder="0" ></iframe>
 
                             <br>
                             <br>
@@ -114,7 +120,7 @@
 
                             <br>
                             <br>
-                            CV can be found <a href="assets/resume/fredo_resume-v051624.pdf" target="_blank"
+                            CV can be found <a href="assets/resume/fredo__resume-v060124.pdf" target="_blank"
                                 class="link" style="color: lightblue;">here</a>
                         </p>
                     </div>
@@ -224,6 +230,7 @@
                             <iframe width="100%" height="60"
                                 src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fcat-women-of-the-moon%2F"
                                 frameborder="0"></iframe>
+
 
                             <br>
                             <br>
