--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
 
 <body>
     <div id="for--desktop">
+        <div class="cursor small"></div>
         <div class="for--desktop__main">
 
             <div class="menu-wrapper">
@@ -22,8 +23,8 @@
                         <a href="index.html">
                             <li class="menu__item">Home</li>
                         </a>
-                        <a href="contact.html">
-                            <li class="menu__item" class="active-page">Contact</li>
+                        <a href="contact.html" class="active-page">
+                            <li class="menu__item">Contact</li>
                         </a>
                         <a href="visualizers.html">
                             <li class="menu__item">Visualizers</li>
