--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body style="overflow: hidden;">
     <div id="for--desktop">
+        <div class="cursor small"></div>
         <div class="for--desktop__main">
             <div class="bg-container">
                 <video src="assets/videos/bg-video-compressed.mp4" autoplay muted playinline loop
@@ -64,22 +65,30 @@
                     </a>
                     <div class="marquee" lang="en">
                         <div class="marquee__text">
-                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
-                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp;
+                                &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp;
+                                &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
                                 &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
                             </span>
-                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
-                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp;
+                                &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp;
+                                &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
                                 &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
                             </span>
                         </div>
                         <div class="marquee__text" aria-hidden="true">
-                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
-                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp;
+                                &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp;
+                                &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
                                 &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
                             </span>
-                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
-                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp;
+                                &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp;
+                                &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
                                 &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
                             </span>
                         </div>
@@ -140,22 +149,30 @@
                     </a>
                     <div class="marquee" lang="en">
                         <div class="marquee__text">
-                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
-                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp;
+                                &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp;
+                                &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
                                 &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
                             </span>
-                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
-                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp;
+                                &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp;
+                                &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
                                 &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
                             </span>
                         </div>
                         <div class="marquee__text" aria-hidden="true">
-                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
-                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp;
+                                &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp;
+                                &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
                                 &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
                             </span>
-                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
-                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp;
+                                &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp;
+                                &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
                                 &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
                             </span>
                         </div>
