--- a/visualizers.html
+++ b/visualizers.html
@@ -14,6 +14,7 @@
 
 <body>
     <div id="for--desktop">
+        <div class="cursor small"></div>
         <div class="for--desktop__main">
 
             <div class="menu-wrapper">
